--- a/index.css
+++ b/index.css
@@ -1,1 +1,16 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
+#game {
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
+#speed {
+  position: absolute;
+  right: 0;
+}
